2010-11-07  Adam Barth  <abarth@webkit.org>

        Reviewed by Eric Seidel.

        Rename Cache to MemoryCache
        https://bugs.webkit.org/show_bug.cgi?id=49159

        * public/WebCache.h:
        * src/WebCache.cpp:
        (WebKit::ToResourceTypeStat):
        (WebKit::WebCache::setCapacities):
        (WebKit::WebCache::clear):
        (WebKit::WebCache::getUsageStats):
        (WebKit::WebCache::getResourceTypeStats):

2010-11-07  Jay Civelli  <jcivelli@chromium.org>

        Reviewed by Kent Tamura.

        Fixing a crasher with the select popup on Mac that happens when a
        page removes the select node when the select changes.
        https://bugs.webkit.org/show_bug.cgi?id=49108

        * src/ExternalPopupMenu.cpp:
        (WebKit::ExternalPopupMenu::didAcceptIndex):
        (WebKit::ExternalPopupMenu::didCancel):

2010-11-06  Pavel Feldman  <pfeldman@chromium.org>

        Not reviewed. Chromium DevTools: disable filesystem inspection
        until polished.
        https://bugs.webkit.org/show_bug.cgi?id=48963

        * src/js/DevTools.js:

2010-11-05  Ilya Sherman  <isherman@chromium.org>

        Reviewed by Simon Fraser.

        Querying selection start and end should be const
        https://bugs.webkit.org/show_bug.cgi?id=48786

        * public/WebInputElement.h:
        * src/WebInputElement.cpp:
        (WebKit::WebInputElement::selectionStart):
        (WebKit::WebInputElement::selectionEnd):

2010-11-05  Chris Marrin  <cmarrin@apple.com>

        Reviewed by Simon Fraser.

        Move resumeAnimations/suspendAnimations from Frame to AnimationController.
        https://bugs.webkit.org/show_bug.cgi?id=49073

        * src/WebAnimationControllerImpl.cpp:
        (WebKit::WebAnimationControllerImpl::suspendAnimations):
        (WebKit::WebAnimationControllerImpl::resumeAnimations):

2010-11-04  Zhenyao Mo  <zmo@google.com>

        Reviewed by Kenneth Russell.
